as of 12/17 at 7:32pm

--- a/submitted.html
+++ b/submitted.html
@@ -14,7 +14,7 @@
 <script>
     function launchJavaFX() {
 
-        fetch('/launchJavaFX')
+        fetch("http://localhost:63342/Main2.java")
             .then(response => response.text())
             .then(data => {
                 console.log(data);
